<resources>
    <string name="app_name">MovieDB</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_movies">MoviesActivity</string>
    <string name="open_drawer">Opened</string>
    <string name="close_drawer">Closed</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="the_movie_database">The Movie Database</string>
    <string name="logo">Logo</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Signup</string>
    <string name="log_out">Logout</string>
    <string name="search">Search</string>
    <string name="my_list">My List</string>
    <string name="home">Home</string>
    <string name="reset_password">Reset Password</string>
    <string name="discover">Discover</string>
    <string name="profile">Profile</string>
    <string name="account">Account</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="email_me">Email Me</string>
    <string name="cancel">Cancel</string>
    <string name="trending_movies_this_week">Trending Movies This Week</string>
    <string name="cast">Cast</string>
    <string name="videos">Videos</string>
    <string name="search_the_movie_database">Search The Movie Database</string>
    <string name="search_results">Search Results For \"%1$s\"</string>
    <string name="no_search_results">No Search Results For \"%1$s\"</string>
    <string name="recommended_movies">Recommended Movies</string>
    <string name="search_watchlist">Search In Watchlist</string>
    <string name="search_watched">Search In Watched</string>
    <string name="empty_string"> </string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="biography">Biography</string>
    <string name="known_for">Known For</string>
    <string name="birthday">Birthday</string>
    <string name="birthplace">Birthplace</string>
    <string name="died">Died</string>
    <string name="unknown">Unknown</string>

</resources>