<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:padding="10dp" >

    <ImageButton
        android:id="@+id/cancel"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@null"
        android:src="@drawable/icon_cancel"
        android:tint="@color/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/icon_film_reel"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_movie_database"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginTop="6dp"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/forgot_password_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:background="@drawable/round_edit_text"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="16dp"
        android:drawableTint="@color/text"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@color/text"
        android:textColorHint="@color/textHint"
        android:textSize="18sp"
        android:layout_marginTop="18dp"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reset_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgot_password_email"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_button"
        android:gravity="center"
        android:text="@string/email_me"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_marginTop="18dp"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_email" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_below="@+id/reset_password"
        android:layout_centerHorizontal="true"
        android:indeterminate="true"
        android:indeterminateTint="@color/accent"
        android:indeterminateTintMode="src_atop"
        android:visibility="invisible"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_password" />

</androidx.constraintlayout.widget.ConstraintLayout>
