<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/background">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/profile_picture_cardview"
                    android:layout_width="150dp"
                    android:backgroundTint="@color/aboveBackground"
                    android:layout_height="215dp">

                    <ImageView
                        android:id="@+id/person_profile_picture"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="14dp"
                    android:paddingEnd="14dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/person_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:paddingTop="12dp"
                        android:paddingBottom="6dp"
                        android:visibility="visible"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        tools:text="Brad Pitt" />

                    <TextView
                        android:id="@+id/birthday_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="Born"
                        android:visibility="visible"
                        android:textColor="@color/textHint"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/birthday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:paddingTop="5dp"
                        android:visibility="visible"
                        android:textColor="@color/white"
                        tools:text="1963-03-17" />

                    <TextView
                        android:id="@+id/deathday_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="@string/died"
                        android:visibility="gone"
                        android:textColor="@color/textHint"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/deathday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:paddingTop="5dp"
                        android:visibility="gone"
                        android:textColor="@color/white"
                        tools:text="2011-03-17" />

                    <TextView
                        android:id="@+id/birthplace_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="@string/birthplace"
                        android:visibility="visible"
                        android:textColor="@color/textHint"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/birthplace"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:paddingTop="5dp"
                        android:visibility="visible"
                        android:textColor="@color/white"
                        tools:text="Shawnee, Oklahoma, USA" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/biography_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/biography"
                    android:visibility="gone"
                    android:textColor="@color/textHint"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/biography"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="William Bradley Pitt is an American actor and film producer. He has received multiple awards, including two Golden Globe Awards and an Academy Award for his acting, in addition to another Academy Award and a Primetime Emmy Award as producer under his production company, Plan B Entertainment."
                    android:textColor="@color/text"
                    android:textSize="14sp"
                    android:visibility="gone"
                    android:justificationMode="inter_word"/>

                <TextView
                    android:id="@+id/cast_info"
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/known_for"
                    android:visibility="gone"
                    android:textColor="@color/textHint"
                    android:textSize="16sp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_person_movies"
                    android:clipToPadding="false"
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:elevation="8dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="3"
                    tools:listitem="@layout/item_movie"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>